30.jul (ws)
      - fix #11804: double-clicking object in palette does not apply to note
        correctly
29.jul (ws)
      - task #11784: dev-experience: explanations for global CMakeList.txt
        (patch from mokaspar)
      - fix #11755: switching from fullscreen to normal makes toolbar unified
        (patch from mokaspar)
      - experimental: selecting slur enters edit mode
      - changed calculation of cubic bezier for slurs/ties
28.jul (ws)
      - fix #11709: slurs/ties across pages: slur/tie on second page is also shown
        on first page
27.jul (ws)
      - fix #11731: printing problems
      - fix #11707: Shortcuts not read back from .ini file (patch from Miwarre)
      - fix #11709: slur/tie across page break shown on wrong page
        (all spanner elements are affected)
26.jul (ws)
      - fix #11710: cannot select any element on pages other than first
      - add screen update after dropping image element
      - expose z-coordinate (stacking order) in image property dialog
25.jul (ws)
      - fix #11690: TextLineSegment property menu is missing
      - fix #11677: score pages crammed into one in navigator
      - fix #11654: set default style on OSX to Native
      - fix #11682: remove menubar icons for OSX
      - fix #11657: save preferences on OSX using the native format
      - fix #11669: self-explaining name for "dev-build"
24.jul (ws)
      - fix #11642: score layout scrambled after first page
      (lv)
      - disabled writing MusicXML lyric extend element, as it currently doesn't work
23.jul (lv)
      - fix #11641 Compressed MusicXML does not open
      - fix #11226 MusicXML exports treble clefs only
      - fix crash when importing musicxml lyrics
      - remove spurious "Unknown Node <staff>" or "... <voice>" messages on MusicXML import
22.jul (lv)
      - fix #10849: musicxml exports lyrics only with notes in voice 1
21.jul
      - Element->canvasPos() is now page relative; Page->canvasPos() is zero for all pages
      (la)