@@ -1,4 +1,5 @@
 30.jul (ws)
+      - renamed "inspector" to "debugger"
       - fix #11804: double-clicking object in palette does not apply to note
         correctly
 29.jul (ws)
